# insurer-policy-chatbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: embeddings.py  memory.py  provider_base.py  rag_chain.py  retriever.py
backend/app/providers/uhc/: chunker.py  downloader.py  metadata.py  parser.py  scraper.py
backend/app/routes/: chat.py  health.py  policies.py
backend/data/: ingestion_checkpoint.json  uhc_policy_urls.json
backend/ingestion/: push_to_qdrant.py  run_ingestion.py
docs/: claude.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatWindow.jsx  CitationCard.jsx  MessageBubble.jsx  PolicySidebar.jsx  SuggestedQuestions.jsx
frontend/src/hooks/: useSSEChat.js
